Update: - Version 2024.06.25 - Got rid of Task option on bottom nav menu. Just don't think it was worth putting in. May add back later if I feel like it. - Ran Code Cleanup and optimized the code some.
(Previous)
- Version 2024.03.08
- Added the ability to upload and retrieve photos from the cloud for records. This gives the user the ability to take a photo of their receipt or a screenshot of an invoice and keep track of it with their maintenance record.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,10 +10,21 @@
     android:animateLayoutChanges="true"
     tools:context=".ui.home.HomeFragment">
 
+    <ProgressBar
+        android:id="@+id/records_loading"
+        style="@android:style/Widget.Material.ProgressBar.Large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/records_recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
