--- a/app/src/main/res/layout/activity_file_chooser.xml
+++ b/app/src/main/res/layout/activity_file_chooser.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ImageChooser">
+    tools:context=".FileChooser">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/image_chooser_tb"
