--- a/app/src/main/res/layout/popup_sort.xml
+++ b/app/src/main/res/layout/popup_sort.xml
@@ -145,7 +145,7 @@
             style="@style/Widget.Material3.CompoundButton.RadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Due Date - DESC"
+            android:text="Create Date - DESC"
             android:theme="@style/MyAppTheme.H3" />
 
         <RadioButton
@@ -153,7 +153,7 @@
             style="@style/Widget.Material3.CompoundButton.RadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Due Date - ASC"
+            android:text="Create Date - ASC"
             android:theme="@style/MyAppTheme.H3" />
 
         <RadioButton
