--- a/app/src/main/res/layout/record_detailed_view.xml
+++ b/app/src/main/res/layout/record_detailed_view.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     style="@style/AppTheme.Buttons"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardElevation="10dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -126,25 +126,80 @@
                 android:text="Record Notes" />
 
             <View
+                android:id="@+id/divider11"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?android:attr/listDivider" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:gravity="start|center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/record_detail_docs_hd"
+                    style="@style/MyAppTheme.H2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Documents:" />
+
+                <Button
+                    android:id="@+id/add_record_doc_btn"
+                    style="@style/AppTheme.Buttons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/record_detail_docs_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
+                android:orientation="vertical">
+
+                <ProgressBar
+                    android:id="@+id/record_detail_document_loading"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+            <View
                 android:id="@+id/divider10"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="?android:attr/listDivider" />
 
-            <TextView
-                android:id="@+id/record_detail_photos_hd"
-                style="@style/MyAppTheme.H2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Photos:" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/add_photo_btn"
-                style="@style/AppTheme.Buttons"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add Photo" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/record_detail_photos_hd"
+                    style="@style/MyAppTheme.H2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Photos:" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/add_photo_btn"
+                    style="@style/AppTheme.Buttons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/record_photos_layout"
@@ -156,7 +211,7 @@
 
                 <ProgressBar
                     android:id="@+id/record_detail_photo_loading"
-                    style="?android:attr/progressBarStyle"
+                    style="@android:style/Widget.Material.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:indeterminate="true"
