--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -2,8 +2,7 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
-    android:ellipsize="marquee"
-    android:singleLine="false"
-    android:textSize="20sp"
     android:layout_height="wrap_content"
-    android:padding="10dp" />
+    android:ellipsize="marquee"
+    android:padding="10dp"
+    android:singleLine="false" />
