--- a/app/src/main/res/layout/popup_profile.xml
+++ b/app/src/main/res/layout/popup_profile.xml
@@ -158,7 +158,8 @@
                     android:id="@+id/tasks_added"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Tasks: 0" />
+                    android:text="Tasks: 0"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
